# polestar

./: .gitignore  CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/sdk/: CMakeLists.txt  LogManager.cpp  LogManager.h
src/server/: CMakeLists.txt  main.cpp
src/ubash/: main.sh
src/uv/: CMakeLists.txt  ILogManager.cpp  ILogManager.h  main.c
